Implement pool, some migrations and tests
