# backend/pkg/api/game_service.pb.go
@@ -28,7 +28,7 @@ func (*JoinPoolRequest) ProtoMessage()               {}
 func (*JoinPoolRequest) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{0} }
 
 type JoinPoolResponse struct {
-	Id string `protobuf:"bytes,1,opt,name=id" json:"id,omitempty"`
+	Game *Game `protobuf:"bytes,1,opt,name=game" json:"game,omitempty"`
 }
 
 func (m *JoinPoolResponse) Reset()                    { *m = JoinPoolResponse{} }
@@ -36,11 +36,11 @@ func (m *JoinPoolResponse) String() string            { return proto.CompactText
 func (*JoinPoolResponse) ProtoMessage()               {}
 func (*JoinPoolResponse) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{1} }
 
-func (m *JoinPoolResponse) GetId() string {
+func (m *JoinPoolResponse) GetGame() *Game {
 	if m != nil {
-		return m.Id
+		return m.Game
 	}
-	return ""
+	return nil
 }
 
 type SendMoveRequest struct {
@@ -132,9 +132,9 @@ func (m *ReceiveMoveResponse) GetBoard() string {
 }
 
 type Game struct {
-	Id          string `protobuf:"bytes,1,opt,name=id" json:"id,omitempty"`
-	RedUserId   uint64 `protobuf:"varint,2,opt,name=red_user_id,json=redUserId" json:"red_user_id,omitempty"`
-	BlackUserId uint64 `protobuf:"varint,3,opt,name=black_user_id,json=blackUserId" json:"black_user_id,omitempty"`
+	Id        string `protobuf:"bytes,1,opt,name=id" json:"id,omitempty"`
+	RedUser   *User  `protobuf:"bytes,2,opt,name=red_user,json=redUser" json:"red_user,omitempty"`
+	BlackUser *User  `protobuf:"bytes,3,opt,name=black_user,json=blackUser" json:"black_user,omitempty"`
 }
 
 func (m *Game) Reset()                    { *m = Game{} }
@@ -149,18 +149,42 @@ func (m *Game) GetId() string {
 	return ""
 }
 
-func (m *Game) GetRedUserId() uint64 {
+func (m *Game) GetRedUser() *User {
 	if m != nil {
-		return m.RedUserId
+		return m.RedUser
+	}
+	return nil
+}
+
+func (m *Game) GetBlackUser() *User {
+	if m != nil {
+		return m.BlackUser
+	}
+	return nil
+}
+
+type User struct {
+	Id       uint64 `protobuf:"varint,1,opt,name=id" json:"id,omitempty"`
+	Username string `protobuf:"bytes,2,opt,name=username" json:"username,omitempty"`
+}
+
+func (m *User) Reset()                    { *m = User{} }
+func (m *User) String() string            { return proto.CompactTextString(m) }
+func (*User) ProtoMessage()               {}
+func (*User) Descriptor() ([]byte, []int) { return fileDescriptor1, []int{7} }
+
+func (m *User) GetId() uint64 {
+	if m != nil {
+		return m.Id
 	}
 	return 0
 }
 
-func (m *Game) GetBlackUserId() uint64 {
+func (m *User) GetUsername() string {
 	if m != nil {
-		return m.BlackUserId
+		return m.Username
 	}
-	return 0
+	return ""
 }
 
 func init() {
@@ -171,6 +195,7 @@ func init() {
 	proto.RegisterType((*ReceiveMoveRequest)(nil), "api.ReceiveMoveRequest")
 	proto.RegisterType((*ReceiveMoveResponse)(nil), "api.ReceiveMoveResponse")
 	proto.RegisterType((*Game)(nil), "api.Game")
+	proto.RegisterType((*User)(nil), "api.User")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -342,31 +367,33 @@ var _GameService_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("game_service.proto", fileDescriptor1) }
 
 var fileDescriptor1 = []byte{
-	// 410 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x92, 0xd1, 0x6a, 0xd4, 0x40,
-	0x14, 0x86, 0xd9, 0x6c, 0xad, 0xed, 0x09, 0xda, 0x7a, 0xac, 0x6c, 0x08, 0x55, 0x64, 0xf0, 0x42,
-	0x0a, 0x4d, 0x4a, 0xbd, 0xf3, 0x05, 0x44, 0x41, 0xd0, 0x2c, 0x7a, 0xa1, 0x17, 0xcb, 0x6c, 0xe6,
-	0xb8, 0x8c, 0x6e, 0xe6, 0xa4, 0x33, 0xd9, 0xdc, 0x88, 0x37, 0xbe, 0x82, 0x6f, 0xe1, 0xeb, 0xf8,
-	0x0a, 0x3e, 0x88, 0xec, 0xcc, 0x6c, 0xeb, 0x6e, 0x40, 0xf0, 0x72, 0xfe, 0xf3, 0xe7, 0xfb, 0x27,
-	0xe7, 0x1f, 0xc0, 0x85, 0x6c, 0x68, 0xe6, 0xc8, 0xf6, 0xba, 0xa6, 0xa2, 0xb5, 0xdc, 0x31, 0x8e,
-	0x65, 0xab, 0xf3, 0xd3, 0x05, 0xf3, 0x62, 0x49, 0xa5, 0x6c, 0x75, 0x29, 0x8d, 0xe1, 0x4e, 0x76,
-	0x9a, 0x8d, 0x0b, 0x96, 0x7c, 0x12, 0xa7, 0xb6, 0xad, 0x4b, 0xd7, 0xc9, 0x6e, 0x15, 0x07, 0xe2,
-	0x1e, 0x1c, 0xbd, 0x62, 0x6d, 0xde, 0x30, 0x2f, 0x2b, 0xba, 0x5a, 0x91, 0xeb, 0x84, 0x80, 0xe3,
-	0x1b, 0xc9, 0xb5, 0x6c, 0x1c, 0xe1, 0x5d, 0x48, 0xb4, 0xca, 0x46, 0x8f, 0x47, 0x4f, 0x0f, 0xab,
-	0x44, 0x2b, 0xf1, 0x16, 0x8e, 0xa6, 0x64, 0xd4, 0x6b, 0xee, 0x29, 0x7e, 0xb6, 0x6b, 0xc1, 0x0c,
-	0x6e, 0xd7, 0xdc, 0x34, 0xd2, 0xa8, 0x2c, 0xf1, 0xe2, 0xe6, 0x88, 0x27, 0x70, 0x6b, 0xce, 0xd2,
-	0xaa, 0x6c, 0xec, 0xf5, 0x70, 0x10, 0x08, 0xc7, 0x37, 0xc8, 0x10, 0x2b, 0x9e, 0x00, 0x56, 0x54,
-	0x93, 0xee, 0xe9, 0x1f, 0x49, 0xe2, 0x0a, 0xee, 0x6f, 0xb9, 0xe2, 0x9d, 0xcf, 0x60, 0x3f, 0xfc,
-	0xaa, 0xb7, 0xa6, 0x97, 0x58, 0x84, 0x25, 0x14, 0xb6, 0xad, 0x8b, 0xa9, 0x9f, 0x54, 0xd1, 0xf1,
-	0xdf, 0x97, 0xfd, 0x00, 0x7b, 0x2f, 0x64, 0x33, 0xd8, 0x0b, 0x3e, 0x82, 0xd4, 0x92, 0x9a, 0xad,
-	0x1c, 0xd9, 0x99, 0x0e, 0xac, 0xbd, 0xea, 0xd0, 0x92, 0x7a, 0xe7, 0xc8, 0xbe, 0x54, 0x28, 0xe0,
-	0xce, 0x7c, 0x29, 0xeb, 0x2f, 0xd7, 0x8e, 0xb1, 0x77, 0xa4, 0x5e, 0x0c, 0x9e, 0xcb, 0x9f, 0x09,
-	0xa4, 0x6b, 0xf8, 0x34, 0x94, 0x8c, 0xef, 0xe1, 0x60, 0xd3, 0x07, 0x9e, 0x14, 0xb2, 0xd5, 0xc5,
-	0x4e, 0x63, 0xf9, 0x83, 0x1d, 0x35, 0x6e, 0xef, 0xe1, 0xf7, 0x5f, 0xbf, 0x7f, 0x24, 0x13, 0x81,
-	0x65, 0x7f, 0x51, 0xae, 0xdf, 0x4d, 0xf9, 0x99, 0xb5, 0x39, 0x6f, 0x99, 0x97, 0xcf, 0x47, 0x67,
-	0xf8, 0x11, 0x0e, 0x36, 0x0b, 0x8f, 0xdc, 0x9d, 0x4a, 0x23, 0x77, 0xd0, 0x8a, 0xf0, 0xdc, 0x53,
-	0x31, 0xb9, 0xe6, 0x7e, 0xd5, 0xea, 0x5b, 0xe9, 0xc8, 0xa8, 0xf3, 0x86, 0x7b, 0x5a, 0xc3, 0x3f,
-	0x41, 0xfa, 0x57, 0x27, 0x38, 0xf1, 0xa4, 0x61, 0x97, 0x79, 0x36, 0x1c, 0x6c, 0xa7, 0x60, 0xbe,
-	0x9d, 0x62, 0x83, 0xd5, 0x07, 0x5d, 0x8c, 0xe6, 0xfb, 0xfe, 0x19, 0x3f, 0xfb, 0x13, 0x00, 0x00,
-	0xff, 0xff, 0x84, 0xd7, 0xa2, 0x3a, 0x18, 0x03, 0x00, 0x00,
+	// 443 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x53, 0xcd, 0x8a, 0x13, 0x41,
+	0x10, 0x26, 0x93, 0xb8, 0x9b, 0x54, 0xc0, 0x5d, 0xdb, 0x95, 0x0c, 0xc3, 0x2e, 0x48, 0xb3, 0x87,
+	0x65, 0x61, 0x67, 0xd6, 0x78, 0xf3, 0x05, 0x04, 0x41, 0xd0, 0x09, 0x7a, 0xf1, 0xb0, 0x74, 0xa6,
+	0x6b, 0x43, 0x6b, 0xa6, 0x6b, 0xb6, 0x7b, 0x32, 0x17, 0xf1, 0xe2, 0x2b, 0xf8, 0x16, 0xbe, 0x8e,
+	0xaf, 0xe0, 0x83, 0x48, 0xff, 0x24, 0x31, 0x09, 0x08, 0xde, 0xa6, 0xaa, 0xbe, 0xfe, 0xbe, 0xaa,
+	0xfa, 0x6a, 0x80, 0x2d, 0x44, 0x8d, 0x77, 0x16, 0x4d, 0xa7, 0x2a, 0xcc, 0x1b, 0x43, 0x2d, 0xb1,
+	0xbe, 0x68, 0x54, 0x76, 0xbe, 0x20, 0x5a, 0x2c, 0xb1, 0x10, 0x8d, 0x2a, 0x84, 0xd6, 0xd4, 0x8a,
+	0x56, 0x91, 0xb6, 0x01, 0x92, 0x4d, 0x62, 0xd5, 0x34, 0x55, 0x61, 0x5b, 0xd1, 0xae, 0x62, 0x81,
+	0x3f, 0x81, 0x93, 0x37, 0xa4, 0xf4, 0x3b, 0xa2, 0x65, 0x89, 0x0f, 0x2b, 0xb4, 0x2d, 0x7f, 0x01,
+	0xa7, 0xdb, 0x94, 0x6d, 0x48, 0x5b, 0x64, 0x17, 0x30, 0x70, 0xc2, 0x69, 0xef, 0x79, 0xef, 0x6a,
+	0x3c, 0x1d, 0xe5, 0xa2, 0x51, 0xf9, 0x6b, 0x51, 0x63, 0xe9, 0xd3, 0xfc, 0x3d, 0x9c, 0xcc, 0x50,
+	0xcb, 0xb7, 0xd4, 0x61, 0x64, 0x61, 0x8f, 0x21, 0x51, 0xd2, 0xe3, 0x47, 0x65, 0xa2, 0x24, 0x4b,
+	0xe1, 0xb8, 0xa2, 0xba, 0x16, 0x5a, 0xa6, 0x89, 0x4f, 0xae, 0x43, 0x76, 0x06, 0x8f, 0xe6, 0x24,
+	0x8c, 0x4c, 0xfb, 0x3e, 0x1f, 0x02, 0xce, 0xe0, 0x74, 0x4b, 0x19, 0xba, 0xe0, 0x97, 0xc0, 0x4a,
+	0xac, 0x50, 0x75, 0xf8, 0x0f, 0x25, 0xfe, 0x00, 0x4f, 0x77, 0x50, 0x71, 0x84, 0x6b, 0x38, 0x0a,
+	0x93, 0xc7, 0x21, 0x58, 0x1e, 0x76, 0x92, 0x9b, 0xa6, 0xca, 0x67, 0xbe, 0x52, 0x46, 0xc4, 0x7f,
+	0x37, 0x7b, 0x0f, 0x03, 0xb7, 0x8d, 0x83, 0xa1, 0x2f, 0x61, 0x68, 0x50, 0xde, 0xad, 0x2c, 0x1a,
+	0x4f, 0xb4, 0x5e, 0xdd, 0x07, 0x8b, 0xa6, 0x3c, 0x36, 0x28, 0xdd, 0x07, 0xbb, 0x02, 0x98, 0x2f,
+	0x45, 0xf5, 0x25, 0xe0, 0xfa, 0xfb, 0xb8, 0x91, 0x2f, 0xba, 0x4f, 0x3e, 0x85, 0x81, 0x7f, 0xb1,
+	0xd5, 0x19, 0x78, 0x9d, 0x0c, 0x86, 0xee, 0xad, 0x76, 0x16, 0x85, 0x86, 0x37, 0xf1, 0xf4, 0x67,
+	0x02, 0x63, 0xd7, 0xdc, 0x2c, 0xdc, 0x0c, 0xfb, 0x08, 0xc3, 0xb5, 0xbd, 0xec, 0xcc, 0xab, 0xec,
+	0x1d, 0x40, 0xf6, 0x6c, 0x2f, 0x1b, 0xb7, 0x7f, 0xf1, 0xfd, 0xd7, 0xef, 0x1f, 0xc9, 0x84, 0xb3,
+	0xa2, 0xbb, 0x2d, 0x9c, 0xed, 0xc5, 0x67, 0x52, 0xfa, 0xa6, 0x21, 0x5a, 0xbe, 0xea, 0x5d, 0xb3,
+	0x4f, 0x30, 0x5c, 0x1b, 0x16, 0x79, 0xf7, 0x4e, 0x22, 0xf2, 0x1e, 0xb8, 0xca, 0x3d, 0xef, 0x39,
+	0x9f, 0x6c, 0x78, 0xbf, 0x2a, 0xf9, 0xad, 0xb0, 0xa8, 0xe5, 0x4d, 0x4d, 0x1d, 0x3a, 0xf2, 0x7b,
+	0x18, 0xff, 0xe5, 0x29, 0x9b, 0x78, 0xa6, 0xc3, 0x5b, 0xc8, 0xd2, 0xc3, 0xc2, 0xae, 0x0a, 0xcb,
+	0x76, 0x55, 0x4c, 0x80, 0x7a, 0xa1, 0xdb, 0xde, 0xfc, 0xc8, 0xff, 0x15, 0x2f, 0xff, 0x04, 0x00,
+	0x00, 0xff, 0xff, 0xc8, 0x8d, 0x5b, 0x89, 0x67, 0x03, 0x00, 0x00,
 }
